--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: "3.8"
 services:
+  front:
+    build: ./frontend
+    environment: 
+      PORT: 2999
   api:
     build:
       dockerfile: Dockerfile
