dotenv all ports

--- a/.env
+++ b/.env
@@ -1,2 +1,16 @@
-localDockerVolumes=D:\dockerVolumes
+LOCAL_DOCKER_VOLUMES=D:\dockerVolumes
+MYSQL_PORT=3306
+
+FRONT_PORT=3000
+API_GATEWAY_PORT=3001
+SERVICE_DB=3002
+
+FRONT_HOST=8080
+API_HOST=8081
+DB_HOST=8082
+
+SERVICE_A_PORT=3003
+
+
+
 
