--- a/.env
+++ b/.env
@@ -3,13 +3,13 @@ MYSQL_PORT=3306
 
 FRONT_PORT=3000
 API_GATEWAY_PORT=3001
-SERVICE_DB=3002
+SERVICE_DB_PORT=3002
+SERVICE_A_PORT=3003
 
 FRONT_HOST=8080
 API_HOST=8081
 DB_HOST=8082
 
-SERVICE_A_PORT=3003
 
 
 
