--- a/service-database/package.json
+++ b/service-database/package.json
@@ -26,6 +26,7 @@
     "@nestjs/microservices": "^8.0.11",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "mysql": "^2.18.1",
     "pg": "^8.7.1",
