--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ FRONT_PORT=3000
 API_GATEWAY_PORT=3001
 SERVICE_DB_PORT=3002
 SERVICE_A_PORT=3003
+SERVICE_AGENDA_PORT=3004
 
 FRONT_HOST=8080
 API_HOST=8081
