--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,27 @@ services:
     networks:
       - backend
 #-----------------DB-----------------#
+  service-agenda:
+    build:
+      context: ./service-agenda
+      target: development
+    volumes:
+      - ./service-agenda/src/:/usr/src/app
+      - /usr/src/app/node_modules
+    command: npm run start:debug
+    environment: 
+      NODE_ENV: development
+      PORT: ${SERVICE_AGENDA_PORT}
+      MYSQL_HOST: mysqldb
+      MYSQL_DATABASE: nest
+    ports:
+      - "${SERVICE_AGENDA_PORT}:${SERVICE_AGENDA_PORT}"
+    networks:
+      - mysql
+      - backend
+    depends_on:
+      - mysqldb
+
   service-db:
     build:
       context: ./service-database
